--- a/website/public/index.html
+++ b/website/public/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
-    <title>site</title>
+    <title>Socialr -- The best social website</title>
   </head>
   <body>
+  <H1>Socialr</H1>
+  <H2>The best social website</H2>
   <p id="message"></p>
   <script>
     var searchFor = "username=";
@@ -10,7 +12,9 @@
     if (usernameLoc == -1) {
       message.textContent = "You are not logged in.";
     } else {
-      message.textContent = "Hello " + document.cookie.substr(usernameLoc + searchFor.length);
+      var start = usernameLoc + searchFor.length;
+      var end = document.cookie.indexOf(";", start);
+      message.textContent = "Hello " + document.cookie.substring(start, end) + '.';
     }
   </script>
   <p>Enter username here:</p>
