--- a/website/public/index.html
+++ b/website/public/index.html
@@ -19,7 +19,7 @@
   </script>
   <p>Enter username here:</p>
   <input type="text" id="username_input"><br>
-  <input type="button" onclick="document.cookie='username='+username_input.value" value="Submit">
+  <input type="button" onclick="document.cookie='username='+username_input.value; location.reload()" value="Submit">
   <input type="button" onclick="document.cookie='username=; expires=Thu, 01 Jan 1970 00:00:01 GMT;'" value="Log out"><br>
   <p><a href="changelog.txt">View changelog</a></p>
   <form action="upload" enctype="multipart/form-data" method="post">
